@@ -11,6 +11,9 @@
 
 <body>
 
+<metal:title fill-slot="content-title"></metal:title>
+<metal:description fill-slot="content-description"></metal:description>
+
 <metal:content-core fill-slot="content-core">
 <metal:content-core define-macro="content-core">
 
